@@ -7,6 +7,7 @@ DarkRP 2.4.1 SVN
 [FIX] Weapon checker resetting ammo
 [FIX] Gunlicense buttons in F4
 [FIX] Shipment issues
+[FIX] Pocket glitch
 [REMOVE] ALL NWVars in doors, players and custom entities (shipments, druglabs etc.) DarkRP now has LESS NWVars than sandbox!
 [REMOVE] VoteCopOn. It's bullshit
 
